fixed minor spacing issue in blog

--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -55,7 +55,7 @@
 		position: absolute;
 		right: 0;
 		top: 18rem;
-		width: 49.3rem;
+		width: 50.7rem;
 		img {
 			box-shadow: -1rem 1.2rem $clr-sunny-yellow;
 		}
