--- a/styles/sass/partials/_sections.scss
+++ b/styles/sass/partials/_sections.scss
@@ -166,7 +166,7 @@
 }
 
 // -----------------
-// Blog
+// Blog Layout
 // -----------------
 .blog {
 	display: flex;
@@ -187,7 +187,7 @@
 		.right-wrapper {
 			display: flex;
 			flex-direction: column;
-			flex-basis: 57%;
+			flex-basis: 58.5%;
 		}
 	}
 }
@@ -203,9 +203,8 @@
 		width: 22rem;
 		background-color: white;
 		position: relative;
-		height: 47rem;
+		height: 49.5rem;
 		justify-content: flex-end;
-		right: -1rem;
 	}
 	.text-container {
 		padding: 0 3rem 0 1rem;
@@ -231,8 +230,8 @@
 	.image-container {
 		position: absolute;
 		top: -1rem;
-		left: -7em;
-		width: 28rem;
+		left: -10em;
+		width: 31rem;
 	}
 }
 
@@ -241,7 +240,7 @@
 // -----------------
 .blog-mission {
 	margin: 21rem 7rem 2rem 0;
-	padding: 6rem 2rem 2rem 3rem;
+	padding: 6rem 2rem 2rem 2rem;
 	box-shadow: -0.5rem 0.5em $clr-sunny-yellow;
 	h4 {
 		margin: 0;
@@ -264,7 +263,7 @@
 		display: flex;
 		flex-direction: column;
 		width: 100%;
-		padding: 0 0 0 3rem;
+		padding: 0 0 0 2rem;
 	}
 	// comments
 	h5 {
@@ -303,7 +302,7 @@
 // Blog Comment Form
 // -----------------
 .blog-comment-form {
-	margin: 1rem 0 5rem 2rem;
+	margin: 1rem 0 5rem 0.5rem;
 	form {
 		width: calc(100% - 7.5rem);
 		display: flex;
